--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,30 +1,27 @@
-name: Playwright Tests
+name: Playwright Cucumber CI
 
 on:
   push:
-    branches:
-      - ci-setup
+    branches: [ "ci-setup" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "ci-setup" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright Browsers
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: Run Cucumber Tests
