--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "playwright-direct-ferries",
   "version": "1.0.0",
-"scripts": {
-  "test": "cucumber-js --require-module ts-node/register"
-}
-,
-  "dependencies": {
-    "@cucumber/cucumber": "^10.0.0",
-    "@playwright/test": "^1.40.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.0"
+  "scripts": {
+    "test": "cucumber-js"
   },
   "devDependencies": {
-    "@types/node": "^20.17.50"
+    "@cucumber/cucumber": "^11.3.0",
+    "@playwright/test": "^1.52.0",
+    "@types/node": "^20.19.0",
+    "playwright": "^1.52.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "description": "Automated test for Sauce using Playwright and Cucumber",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SHAS270787/Sauce.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/SHAS270787/Sauce/issues"
+  },
+  "homepage": "https://github.com/SHAS270787/Sauce#readme",
+  "dependencies": {
+    "@types/cucumber": "^6.0.1"
   }
 }
